@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
@@ -33,9 +32,9 @@ import java.util.Map.Entry;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import org.apache.solr.common.SolrDocumentList;
-import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.apache.solr.common.SolrDocumentList;
 
 import io.goobi.viewer.api.rest.model.tasks.TaskManager;
 import io.goobi.viewer.controller.DataManager;
@@ -47,9 +46,10 @@ import io.goobi.viewer.solr.SolrConstants;
 import io.goobi.viewer.solr.SolrSearchIndex;
 
 /**
- * Task managed by the viewers {@link TaskManager} which indexes all {@link DailySessionUsageStatistics} up to the day before today.
- * The task monitors the indexing progress and deletes the {@link DailySessionUsageStatistics} for each day once a STATISTICS_USAGE document exists in the index for that day.
- * Should run in its own thread
+ * Task managed by the viewers {@link TaskManager} which indexes all {@link DailySessionUsageStatistics} up to the day before today. The task monitors
+ * the indexing progress and deletes the {@link DailySessionUsageStatistics} for each day once a STATISTICS_USAGE document exists in the index for
+ * that day. Should run in its own thread
+ * 
  * @author florian
  *
  */
@@ -57,9 +57,8 @@ public class StatisticsIndexTask {
 
     private static final Logger logger = LogManager.getLogger(StatisticsIndexTask.class);
 
-    
-    private static final long DELAY_BETWEEN_INDEX_CHECKS_SECONDS = 2 * 60l;
-    private static final long TIMEOUT_INDEX_CHECKS_HOURS = 2 * 24l;
+    private static final long DELAY_BETWEEN_INDEX_CHECKS_SECONDS = 2 * 60L;
+    private static final long TIMEOUT_INDEX_CHECKS_HOURS = 2 * 24L;
 
     private final IDAO dao;
     private final StatisticsIndexer indexer;
@@ -67,8 +66,9 @@ public class StatisticsIndexTask {
 
     /**
      * Default constructor
-     * @param dao       the DAO from which to collect the usage statistics
-     * @param indexer   the {@link StatisticsIndexer} to use for indexing
+     * 
+     * @param dao the DAO from which to collect the usage statistics
+     * @param indexer the {@link StatisticsIndexer} to use for indexing
      * @param solrIndex the {@link SolrSearchIndex} for querying the SOLR for indexed STATISTICS_USAGE documents
      */
     public StatisticsIndexTask(IDAO dao, StatisticsIndexer indexer, SolrSearchIndex solrIndex) {
@@ -79,6 +79,7 @@ public class StatisticsIndexTask {
 
     /**
      * Constructor using instances from {@link DataManager}
+     * 
      * @throws DAOException
      */
     public StatisticsIndexTask() throws DAOException {
@@ -89,14 +90,16 @@ public class StatisticsIndexTask {
 
     /**
      * Start the indexint
+     * 
      * @throws DAOException
      * @throws IOException
      */
     public void startTask() throws DAOException, IOException {
 
         List<DailySessionUsageStatistics> stats = this.dao.getAllUsageStatistics()
-                .stream().filter(stat -> stat.getDate().isBefore(LocalDate.now()))
-                .collect(Collectors.toList());
+                .stream()
+                .filter(stat -> stat.getDate().isBefore(LocalDate.now()))
+                .toList();
         if (!stats.isEmpty()) {
             logger.info("Moving {} daily usage statistics to SOLR", stats.size());
             for (DailySessionUsageStatistics stat : stats) {
@@ -104,26 +107,26 @@ public class StatisticsIndexTask {
                 logger.info("Written usage statistics for {} to file {}", stat.getDate(), indexFile);
             }
         }
-        
+
         long timeStartIndexing = System.currentTimeMillis();
         Map<DailySessionUsageStatistics, Boolean> statsIndexed = stats.stream().collect(Collectors.toMap(Function.identity(), s -> Boolean.FALSE));
         try {
             while (System.currentTimeMillis() < timeStartIndexing + getTimeoutMillis()) {
                 Thread.sleep(getCheckDelayMillis());
                 List<DailySessionUsageStatistics> statsNotIndexed =
-                        statsIndexed.entrySet().stream().filter(e -> !e.getValue()).map(Entry::getKey).collect(Collectors.toList());
+                        statsIndexed.entrySet().stream().filter(e -> !e.getValue()).map(Entry::getKey).toList();
                 for (DailySessionUsageStatistics stat : statsNotIndexed) {
-                    String query = String.format("+%s:%s +%s:\"%s\"", 
-                            SolrConstants.DOCTYPE, 
+                    String query = String.format("+%s:%s +%s:\"%s\"",
+                            SolrConstants.DOCTYPE,
                             StatisticsLuceneFields.USAGE_STATISTICS_DOCTYPE,
                             StatisticsLuceneFields.DATE,
-                            StatisticsLuceneFields.solrDateFormatter.format(stat.getDate().atStartOfDay()));
+                            StatisticsLuceneFields.SOLR_DATE_FORMATTER.format(stat.getDate().atStartOfDay()));
                     SolrDocumentList list = this.solrIndex.search(query);
-                    if(!list.isEmpty()) {
+                    if (!list.isEmpty()) {
                         logger.info("Indexing of usage statistics for {} finished", stat.getDate());
                         statsIndexed.put(stat, Boolean.TRUE);
                         logger.info("Deleting usage statistics in DAO for {}", stat.getDate());
-                        this.dao.deleteUsageStatistics(stat.getId());                        
+                        this.dao.deleteUsageStatistics(stat.getId());
                     }
                 }
                 if (!statsIndexed.containsValue(Boolean.FALSE)) {
@@ -135,15 +138,15 @@ public class StatisticsIndexTask {
             logger.warn("Checking indexed status of usage statistics has been interrupted");
             Thread.currentThread().interrupt();
         } catch (PresentationException | IndexUnreachableException e1) {
-            logger.warn("Checking indexed status of usage statistics failed with error {}" , e1.toString());
+            logger.warn("Checking indexed status of usage statistics failed with error {}", e1.toString());
         }
     }
 
-    private long getCheckDelayMillis() {
+    private static long getCheckDelayMillis() {
         return Duration.of(DELAY_BETWEEN_INDEX_CHECKS_SECONDS, ChronoUnit.SECONDS).toMillis();
     }
 
-    private long getTimeoutMillis() {
+    private static long getTimeoutMillis() {
         return Duration.of(TIMEOUT_INDEX_CHECKS_HOURS, ChronoUnit.HOURS).toMillis();
     }
 
