@@ -28,9 +28,12 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Date;
 import java.util.EnumMap;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Map.Entry;
+
+import javax.ws.rs.WebApplicationException;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -98,43 +101,51 @@ public class StatisticsSummaryBuilder {
      * @throws IndexUnreachableException
      * @throws PresentationException
      */
-    public StatisticsSummary loadSummary(StatisticsSummaryFilter filter) throws DAOException, IndexUnreachableException, PresentationException {
+    public StatisticsSummary loadSummary(StatisticsSummaryFilter filter) throws IndexUnreachableException, PresentationException {
         return loadFromSolr(filter);
     }
 
     /**
      * 
      * @param filter
-     * @return
-     * @throws DAOException
+     * @return {@link StatisticsSummary}
      * @throws IndexUnreachableException
-     * @deprecated statistics are loaded from solr, using the {@link #loadFromSolr(StatisticsSummaryFilter) method
+     * @throws PresentationException
      */
-    @Deprecated(since = "22.08")
-    private StatisticsSummary loadFromDAO(StatisticsSummaryFilter filter) throws DAOException, IndexUnreachableException {
-        List<String> identifiersToInclude = getFilteredIdentifierList(filter);
-        List<DailySessionUsageStatistics> days = this.dao.getUsageStatistics(filter.getStartDate(), filter.getEndDate());
-        return days.stream().reduce(StatisticsSummary.empty(), (s, d) -> add(s, d, identifiersToInclude), StatisticsSummary::add);
-    }
-
     private StatisticsSummary loadFromSolr(StatisticsSummaryFilter filter) throws IndexUnreachableException, PresentationException {
         List<String> identifiersToInclude = getFilteredIdentifierList(filter);
-        List<String> fields = getFieldListForRecords(identifiersToInclude);
+        if (filter.hasFilterQuery() && identifiersToInclude.isEmpty()) {
+            throw new WebApplicationException("No records found matching filter " + filter.getFilterQuery());
+        }
+        List<String> fields = new ArrayList<>(getFieldListForRecords(identifiersToInclude));
         if (!fields.isEmpty()) {
             fields.add(StatisticsLuceneFields.DATE);
         }
-        SolrDocumentList docs = this.searchIndex.search(getSolrQuery(filter), fields);
+        SolrDocumentList docs =
+                // search(getSolrQuery(filter), fields);
+                this.searchIndex.search(getSolrQuery(filter), fields);
         return docs.stream().reduce(StatisticsSummary.empty(), this::add, StatisticsSummary::add);
     }
 
+    /**
+     * 
+     * @param s
+     * @param d
+     * @return {@link StatisticsSummary}
+     */
     private StatisticsSummary add(StatisticsSummary s, SolrDocument d) {
         StatisticsSummary s2 = getStatisticsFromSolrDoc(d);
         return s.add(s2);
     }
 
+    /**
+     * 
+     * @param doc
+     * @return {@link StatisticsSummary}
+     */
     @SuppressWarnings("unchecked")
     private StatisticsSummary getStatisticsFromSolrDoc(SolrDocument doc) {
-        Long[] counts = new Long[] { 0l, 0l, 0l, 0l, 0l, 0l };
+        Long[] counts = new Long[] { 0L, 0L, 0L, 0L, 0L, 0L };
         for (String fieldName : doc.getFieldNames()) {
             if (fieldName.startsWith(StatisticsLuceneFields.RECORD_STATISTICS_PREFIX)) {
                 try {
@@ -159,6 +170,38 @@ public class StatisticsSummaryBuilder {
         return new StatisticsSummary(map);
     }
 
+    @SuppressWarnings("unchecked")
+    private Map<String, Map<RequestType, RequestTypeSummary>> getRecordStatisticsFromSolrDoc(SolrDocument doc) {
+        Map<String, List<Long>> countsMap = new HashMap<>();
+        for (String fieldName : doc.getFieldNames()) {
+            if (fieldName.startsWith(StatisticsLuceneFields.RECORD_STATISTICS_PREFIX)) {
+                try {
+                    List<Long> values = (List<Long>) doc.getFieldValue(fieldName);
+                    countsMap.put(StatisticsLuceneFields.getPi(fieldName), values);
+                } catch (ClassCastException e) {
+                    logger.warn("Envountered solr doc field of unexcepted type: '{}' : '{}'", fieldName, doc.getFieldValue(fieldName));
+                }
+            }
+        }
+
+        Map<String, Map<RequestType, RequestTypeSummary>> map = new HashMap<>(); // new EnumMap<>(RequestType.class);
+        LocalDate date = getDate(doc);
+
+        for (Entry<String, List<Long>> entry : countsMap.entrySet()) {
+            String pi = entry.getKey();
+            List<Long> counts = entry.getValue();
+            Map<RequestType, RequestTypeSummary> recordMap = new EnumMap<>(RequestType.class);
+            for (int i = 0; i < counts.size(); i += 2) {
+                RequestType type = RequestType.getTypeForTotalCountIndex(i);
+                long total = counts.get(i);
+                long unique = counts.get(i + 1);
+                recordMap.put(type, new RequestTypeSummary(total, unique, date, date));
+            }
+            map.put(pi, recordMap);
+        }
+        return map;
+    }
+
     private static LocalDate getDate(SolrDocument doc) {
         if (doc.containsKey(StatisticsLuceneFields.DATE)) {
             Date date = (Date) doc.getFieldValue(StatisticsLuceneFields.DATE);
@@ -167,8 +210,13 @@ public class StatisticsSummaryBuilder {
         return null;
     }
 
+    /**
+     * 
+     * @param identifiersToInclude
+     * @return List<String> (immutable!)
+     */
     private static List<String> getFieldListForRecords(List<String> identifiersToInclude) {
-        return identifiersToInclude.stream().map(StatisticsLuceneFields::getFieldName).collect(Collectors.toList());
+        return identifiersToInclude.stream().map(StatisticsLuceneFields::getFieldName).toList();
     }
 
     private static String getSolrQuery(StatisticsSummaryFilter filter) {
@@ -180,31 +228,39 @@ public class StatisticsSummaryBuilder {
                     .append(StatisticsLuceneFields.DATE)
                     .append(":")
                     .append("[")
-                    .append(StatisticsLuceneFields.solrDateFormatter.format(filter.getStartDate().atStartOfDay()))
+                    .append(StatisticsLuceneFields.SOLR_DATE_FORMATTER.format(filter.getStartDate().atStartOfDay()))
                     .append(" TO ")
-                    .append(StatisticsLuceneFields.solrDateFormatter.format(filter.getEndDate().atStartOfDay()))
+                    .append(StatisticsLuceneFields.SOLR_DATE_FORMATTER.format(filter.getEndDate().atStartOfDay()))
                     .append("]");
         } else if (filter.hasStartDateRestriction()) {
             sb.append(" +")
                     .append(StatisticsLuceneFields.DATE)
                     .append(":")
                     .append("\"")
-                    .append(StatisticsLuceneFields.solrDateFormatter.format(filter.getStartDate().atStartOfDay()))
+                    .append(StatisticsLuceneFields.SOLR_DATE_FORMATTER.format(filter.getStartDate().atStartOfDay()))
                     .append("\"");
         }
         return sb.toString();
     }
 
-    private List<String> getFilteredIdentifierList(StatisticsSummaryFilter filter) throws IndexUnreachableException {
+    /**
+     * 
+     * @param filter
+     * @return List<String>
+     * @throws IndexUnreachableException
+     * @should extract pi from filter correctly
+     */
+    List<String> getFilteredIdentifierList(StatisticsSummaryFilter filter) throws IndexUnreachableException {
         List<String> identifiersToInclude = new ArrayList<>();
         if (StringUtils.isNotBlank(filter.getFilterQuery())) {
             try {
-                String completeFilter = "+({}) +ISWORK:*".replace("{}", filter.getFilterQuery());
-                identifiersToInclude.addAll(this.searchIndex
-                        .search(completeFilter, Collections.singletonList(SolrConstants.PI))
-                        .stream()
-                        .map(doc -> doc.getFieldValue(SolrConstants.PI).toString())
-                        .collect(Collectors.toList()));
+                String completeFilter = "+({}) +(ISWORK:true ISANCHOR:true DOCTYPE:GROUP)".replace("{}", filter.getFilterQuery());
+                identifiersToInclude.addAll(
+                        //search(completeFilter, Collections.singletonList(SolrConstants.PI))
+                        this.searchIndex.search(completeFilter, Collections.singletonList(SolrConstants.PI))
+                                .stream()
+                                .map(doc -> doc.getFieldValue(SolrConstants.PI).toString())
+                                .toList());
             } catch (PresentationException e) {
                 throw new IndexUnreachableException(e.toString());
             }
@@ -216,5 +272,4 @@ public class StatisticsSummaryBuilder {
         StatisticsSummary dailyStatsSummary = new StatisticsSummary(dailyStats, identifiersToInclude);
         return summary.add(dailyStatsSummary);
     }
-
 }
